fixed popup seperator spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -415,7 +415,7 @@ body {
     visibility: visible;
     opacity: 1;
     transition: 0.5s;
-    width:40%;
+    width:35%;
     z-index: 2;
   }
 
@@ -494,9 +494,8 @@ body {
       color: white;
       background: -webkit-linear-gradient( left, #22f770,#21aff7 );
       cursor: pointer;
-      
+      margin: 1.3rem 0;
   }
-
 
 
 /*------------------------navbar -----------------------*/
